--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore db test files.
+db/test.*
+
+# Ignore spring files.
+/spring/*.pid
